--- a/css/output.css
+++ b/css/output.css
@@ -4,13 +4,72 @@
   box-sizing: border-box;
 }
 
-header nav a {
+body {
+  font-family: "montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 89px;
+}
+header nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+header nav .links a {
   text-transform: uppercase;
   text-decoration: none;
+  color: black;
   transition-property: color;
   transition-duration: 0.3s;
   transition-timing-function: ease;
   transition-delay: 0s;
+}
+header nav .links a:hover {
+  color: #838383;
+}
+header .login a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  transition-property: color;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+}
+
+.banner {
+  text-align: center;
+}
+.banner img {
+  width: 100%;
+}
+.banner .banner-text {
+  position: relative;
+  bottom: 44vw;
+  text-transform: uppercase;
+}
+.banner h2 {
+  font-size: 3.5vw;
+  font-weight: bolder;
+}
+.banner p {
+  font-size: 1.7vw;
+  font-weight: bold;
+  margin-top: 5px;
+}
+.banner button {
+  position: relative;
+  bottom: 10vw;
+  min-width: 230px;
+  max-width: 230px;
+  font-size: 26px;
+  line-height: 26px;
+  font-weight: 800;
 }
 
 /*# sourceMappingURL=output.css.map */
