--- a/css/output.css
+++ b/css/output.css
@@ -67,7 +67,6 @@ header .login .lnr {
 }
 
 .banner1 {
-  display: none;
   margin-bottom: -110px;
   text-align: center;
 }
@@ -159,7 +158,7 @@ header .login .lnr {
 }
 .banner2 .learn-more p {
   position: relative;
-  bottom: 100px;
+  bottom: 10vw;
   color: red;
 }
 
@@ -167,7 +166,8 @@ header .login .lnr {
   text-align: center;
   text-transform: uppercase;
   margin: 55px;
-  height: 335px;
+  height: 435px;
+  overflow: hidden;
 }
 .products > p {
   font-size: 12px;
@@ -179,13 +179,14 @@ header .login .lnr {
   flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
-  overflow: hidden;
+  justify-content: center;
   margin: 0 50px;
 }
 .products .product {
   width: 250px;
   height: 315px;
   margin: 0 10px;
+  margin-bottom: 50px;
 }
 .products .product img {
   width: 100%;
@@ -201,6 +202,88 @@ header .login .lnr {
 }
 .products .product p .fancy {
   font-style: italic;
+}
+
+.catagories {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #f2f2f2;
+}
+.catagories > p {
+  align-self: center;
+  font-size: 2.6vw;
+  font-weight: bold;
+  padding: 50px;
+  width: 30%;
+}
+.catagories .cat-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 100px 50px;
+}
+.catagories a {
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 30%;
+  margin: 0 8px;
+}
+.catagories a img {
+  width: 100%;
+  height: auto;
+}
+.catagories a p {
+  position: relative;
+  bottom: 13vw;
+  left: 10px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.site-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+.site-links a {
+  padding: 40px 15px;
+}
+.site-links img {
+  width: 90px;
+  height: 45px;
+  opacity: 0.5;
+}
+.site-links img:hover {
+  opacity: 1;
+}
+
+footer {
+  background-color: #f2f2f2;
+  opacity: 0.6;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  font-size: 10px;
+  margin: 0 11px;
+  letter-spacing: 1.6px;
+}
+footer .footer-main {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+footer .foot-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 50%;
 }
 
 /*# sourceMappingURL=output.css.map */
