add media query functionality to header

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -28,11 +28,11 @@
 
 @mixin mQ($screen-size...){
   @if length($screen-size) == 1 {
-    @media screen and (max-width: nth($sceen-size, 1)) {
+    @media screen and (max-width: nth($screen-size, 1)) {
       @content;
     }
   }
-  @if length($sceen-size) == 2 {
+  @if length($screen-size) == 2 {
     @media screen and (max-width: nth($screen-size,1)) and (min-width: nth($screen-size, 2)) {
       @content;
     }
