--- a/css/output.css
+++ b/css/output.css
@@ -15,6 +15,9 @@ header {
   height: 89px;
   margin: 0 50px;
 }
+header .menu {
+  display: none;
+}
 header .logo img {
   width: 130px;
   height: auto;
@@ -64,6 +67,9 @@ header .login a:first-of-type {
 header .login .lnr {
   font-weight: 800;
   font-size: 13px;
+}
+header .login .icons {
+  display: none;
 }
 
 .banner1 {
@@ -166,7 +172,7 @@ header .login .lnr {
   text-align: center;
   text-transform: uppercase;
   margin: 55px;
-  height: 435px;
+  height: 480px;
   overflow: hidden;
 }
 .products > p {
@@ -186,7 +192,7 @@ header .login .lnr {
   width: 250px;
   height: 315px;
   margin: 0 10px;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 .products .product img {
   width: 100%;
@@ -194,11 +200,12 @@ header .login .lnr {
 }
 .products .product h2 {
   font-size: 11px;
-  font-weight: bold;
-  margin: 10px;
+  font-weight: 500;
+  margin: 25px 10px 10px 10px;
 }
 .products .product p {
   font-size: 11px;
+  text-transform: lowercase;
 }
 .products .product p .fancy {
   font-style: italic;
@@ -284,6 +291,36 @@ footer .foot-links {
   align-items: center;
   justify-content: space-around;
   width: 50%;
+}
+@media screen and (max-width: 992px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 125px;
+  }
+  header .menu {
+    display: block;
+    font-size: 20px;
+  }
+  header .logo img {
+    width: 250px;
+    height: auto;
+  }
+  header nav {
+    width: 20%;
+  }
+  header nav .links {
+    display: none;
+  }
+  header nav .login > a {
+    display: none;
+  }
+  header nav .icons {
+    display: block !important;
+  }
 }
 
 /*# sourceMappingURL=output.css.map */
