--- a/css/output.css
+++ b/css/output.css
@@ -143,7 +143,7 @@ header .login .icons {
   color: white;
   width: 45%;
   height: 100%;
-  background-color: #dedfe3;
+  background-color: #d0d1d5;
 }
 .banner2 .red-dot img {
   height: 10vw;
@@ -292,7 +292,7 @@ footer .foot-links {
   justify-content: space-around;
   width: 50%;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 992px) and (min-width: 778px) {
   header {
     display: flex;
     flex-direction: row;
@@ -321,6 +321,168 @@ footer .foot-links {
   header nav .icons {
     display: block !important;
   }
+}
+@media screen and (max-width: 777px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 125px;
+  }
+  header .menu {
+    display: block;
+    font-size: 20px;
+  }
+  header .logo img {
+    width: 250px;
+    height: auto;
+  }
+  header nav {
+    width: 20%;
+  }
+  header nav .links {
+    display: none;
+  }
+  header nav .login > a {
+    display: none;
+  }
+  header nav .icons {
+    display: block !important;
+  }
+
+  .banner1 {
+    height: 800px;
+  }
+  .banner1 img {
+    height: 650px;
+    width: auto;
+    overflow: hidden;
+    position: relative;
+    left: -50px;
+  }
+  .banner1 .banner-text {
+    position: relative;
+    bottom: 85vw;
+  }
+  .banner1 .banner-text h2 {
+    font-size: 7vw;
+  }
+  .banner1 .banner-text p {
+    font-size: 3.5vw;
+  }
+  .banner1 button {
+    bottom: 30vw;
+  }
+
+  .design-burb {
+    width: 80%;
+    margin: 0 10%;
+  }
+  .design-burb h1 {
+    font-size: 4.2vw;
+  }
+  .design-burb p {
+    font-size: 2.1vw;
+  }
+  .design-burb .social-media {
+    padding: 10px 100px;
+  }
+  .design-burb .social-media img {
+    height: 2.8vw;
+  }
+
+  .banner2 {
+    flex-direction: column;
+    height: auto;
+  }
+  .banner2 .red-dot {
+    width: 100%;
+  }
+  .banner2 .red-dot img {
+    height: 18vw;
+    margin: 0 0 50px 0;
+    position: relative;
+    top: -10px;
+  }
+  .banner2 .red-dot h1 {
+    margin: 30px 0 20px 0;
+    font-size: 6.5vw;
+  }
+  .banner2 .red-dot p {
+    font-size: 2vw;
+    margin: 0 30% 40px 30%;
+  }
+  .banner2 .learn-more {
+    width: 100%;
+    height: 440px;
+  }
+  .banner2 .learn-more img {
+    width: 100%;
+    height: auto;
+  }
+  .banner2 .learn-more p {
+    position: relative;
+    bottom: 50vw;
+    color: red;
+    font-size: 1.6vw;
+    font-weight: 500;
+    letter-spacing: 1px;
+  }
+
+  .products {
+    margin: 40px;
+    height: 850px;
+    overflow: hidden;
+  }
+  .products .product-display {
+    margin: 0 50px;
+  }
+  .products .product {
+    width: 100%;
+    height: auto;
+    margin-bottom: 200px;
+  }
+}
+.catagories {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #f2f2f2;
+}
+.catagories > p {
+  align-self: center;
+  font-size: 2.6vw;
+  font-weight: bold;
+  padding: 50px;
+  width: 30%;
+}
+.catagories .cat-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 100px 50px;
+}
+.catagories a {
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 30%;
+  margin: 0 8px;
+}
+.catagories a img {
+  width: 100%;
+  height: auto;
+}
+.catagories a p {
+  position: relative;
+  bottom: 13vw;
+  left: 10px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=output.css.map */
