--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,5 @@
 
 $grey: #838383;
-$back-grey: #dedfe3;
+$back-grey: #d0d1d5;
 $light-grey: #f2f2f2;
+$font: 'montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
