--- a/scss/input.scss
+++ b/scss/input.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-family: 'montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-family: $font;
 }
 
 header {
@@ -195,7 +195,7 @@ header {
 
 .catagories {
   @include flex-row;
-  background-color: #f2f2f2;
+  background-color: $light-grey;
   > p {
     align-self: center;
     font-size: 2.6vw;
@@ -267,7 +267,7 @@ footer {
 
 //media queries
 
-@include mQ(992px) {
+@media screen and (max-width: 992px) and (min-width: 778px) {
   header {
     @include flex-row;
     justify-content: space-between;
@@ -296,6 +296,160 @@ footer {
   }
 }
 
+@media screen and (max-width: 777px) {
+  header {
+    @include flex-row;
+    justify-content: space-between;
+    width: 100%;
+    height: 125px;
+    .menu {
+      display: block;
+      font-size: 20px;
+    }
+    .logo img {
+      width: 250px;
+      height: auto;
+    }
+    nav {
+      width: 20%;
+      .links {
+        display: none;
+      }
+      .login > a {
+        display: none;
+      }
+      .icons {
+        display: block !important;
+      }
+    }
+  }
+  .banner1 {
+    height: 800px;
+    img {
+      height: 650px;
+      width: auto;
+      overflow: hidden;
+      position: relative;
+      left: -50px;
+    }
+    .banner-text {
+      position: relative;
+      bottom: 85vw;
+      h2 {
+        font-size: 7vw;
+      }
+      p{
+        font-size: 3.5vw;
+      }
+    }
+    button {
+      bottom: 30vw;
+    }
+  }
+  .design-burb {
+    width: 80%;
+    margin: 0 10%;
+    h1 {
+      font-size: 4.2vw;
+    }
+    p {
+      font-size: 2.1vw;
+    }
+    .social-media {
+      padding: 10px 100px;
+      img {
+        height: 2.8vw;
+      }
+    }
+  }
+  .banner2 {
+    flex-direction: column;
+    height: auto;
+    .red-dot {
+      width: 100%;
+      img {
+        height: 18vw;
+        margin: 0 0 50px 0;
+        position: relative;
+        top: -10px;
+      }
+      h1 {
+        margin: 30px 0 20px 0;
+        font-size: 6.5vw;
+      }
+      p {
+        font-size: 2vw;
+        margin: 0 30% 40px 30%;
+      }
+    }
+    .learn-more {
+      width: 100%;
+      height: 440px;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+      p {
+        position: relative;
+        bottom: 50vw;
+        color: red;
+        font-size: 1.6vw;
+        font-weight: 500;
+        letter-spacing: 1px;
+      }
+    }
+  } //end of banner2 mQ
+  .products {
+    margin: 40px;
+    height: 850px;
+    overflow: hidden;
+    .product-display  {
+      margin: 0 50px;
+    }
+    .product {
+      width: 100%;
+      height: auto;
+      margin-bottom: 200px;
+    }
+  } //end of products mQ
+}
+
+.catagories {
+  @include flex-row;
+  background-color: $light-grey;
+  > p {
+    align-self: center;
+    font-size: 2.6vw;
+    font-weight: bold;
+    padding: 50px;
+    width: 30%;
+  }
+  .cat-container {
+    @include flex-row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 100px 50px;
+  }
+  a {
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    width: 30%;
+    margin: 0 8px;
+    img {
+      width: 100%;
+      height: auto;
+    }
+    p {
+      position: relative;
+      bottom: 13vw;
+      left: 10px;
+      font-size: 12px;
+      font-weight: bold;
+    }
+  }
+} // end of projust catagoies
 
 
 
