--- a/scss/input.scss
+++ b/scss/input.scss
@@ -267,7 +267,7 @@ footer {
 
 //media queries
 
-@media screen and (max-width: 992px) and (min-width: 778px) {
+@media screen and (max-width: 999px) and (min-width: 778px) {
   header {
     @include flex-row;
     justify-content: space-between;
@@ -292,6 +292,13 @@ footer {
       .icons {
         display: block !important;
       }
+    }
+  }
+  .learn-more {
+    width: 55%;
+    img {
+      height: 565px !important;
+      width: auto !important;
     }
   }
 }
@@ -413,43 +420,31 @@ footer {
       margin-bottom: 200px;
     }
   } //end of products mQ
+  .catagories {
+    flex-direction: column;
+    > p {
+      align-self: flex-start;
+      font-size: 4vw;
+      padding: 80px 0 50px 30px;
+      width: 60%;
+    }
+    .cat-container {
+      flex-direction: column;
+      padding: 0;
+    }
+    a {
+      width: 150%;
+      margin: 0 8px;
+      p {
+        position: relative;
+        bottom: 42vw;
+        font-weight: 500;
+        letter-spacing: 2px;
+      }
+    }
+  } // end of projust catagoies mQ
 }
 
-.catagories {
-  @include flex-row;
-  background-color: $light-grey;
-  > p {
-    align-self: center;
-    font-size: 2.6vw;
-    font-weight: bold;
-    padding: 50px;
-    width: 30%;
-  }
-  .cat-container {
-    @include flex-row;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 100px 50px;
-  }
-  a {
-    color: black;
-    text-decoration: none;
-    text-transform: uppercase;
-    width: 30%;
-    margin: 0 8px;
-    img {
-      width: 100%;
-      height: auto;
-    }
-    p {
-      position: relative;
-      bottom: 13vw;
-      left: 10px;
-      font-size: 12px;
-      font-weight: bold;
-    }
-  }
-} // end of projust catagoies
 
 
 
